...
    var body: some View {
        NavigationView {
            VStack {
                // Search bar for anime search
                TextField("Search Anime", text: $searchText)
                    .textFieldStyle(RoundedBorderTextFieldStyle())
                    .padding().accessibilityIdentifier("SearchAnimeField")  // Add an identifier for the search field

                HStack {
                    Picker("Year", selection: $selectedYear) {
                        ForEach((2000...Calendar.current.component(.year, from: Date())), id: \.self) { year in
                            Text("\(year)")  // Correct formatting of year (no extra commas)
                                .tag(year)
...
