...
                                .frame(maxWidth: .infinity)
                                .padding()
                                .background(Color.green)
                                .foregroundColor(.white)
                                .cornerRadius(8)
                        }
                        .accessibilityIdentifier("trendingButton")
                    }
                    .padding()
                }
            }
            .onAppear {
                controller.fetchAllAnimeData()
...
